--- a/TeamProject/web/css/templatemo-style.css
+++ b/TeamProject/web/css/templatemo-style.css
@@ -577,11 +577,13 @@ a#logo {
   position: absolute;
   z-index: 99;
   bottom: 0;
+  visibility: hidden;
   text-align: left;
+  color : black;
   padding: 20px;
-  background-color: rgba(250,250,250,0.25);
+  background-color: rgba(250,250,250,1);
   width: 100%;
-  height: 60px;
+  height: 100%;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   -webkit-transition: all 0.4s ease;
@@ -589,16 +591,18 @@ a#logo {
 }
 .portfolio-item .thumb-inner h4 {
   margin-bottom: 0;
+  color: #4a4a4a;
   font-size: 16px;
   margin-top: 0px;
 }
 .portfolio-item .thumb-inner p {
   opacity: 0;
-  visibility: hidden;
+  color: #1e1e1e;
+  /*visibility: hidden;*/
   position: absolute;
   margin-bottom: 0px;
 }
-.portfolio-item:hover .thumb-inner p {
+/*.portfolio-item:hover .thumb-inner p {
   position: relative;
   opacity: 1;
   visibility: visible;
@@ -613,7 +617,7 @@ a#logo {
    margin-top: 30%;
   color: #1e1e1e;
   margin-bottom: 20px;
-}
+}*/
 
 
 /*==============================================
