--- a/TeamProject/web/view/css/templatemo-style.css
+++ b/TeamProject/web/view/css/templatemo-style.css
@@ -655,6 +655,17 @@ a#logo {
   font-size:14px;
   margin-bottom: 30px;
 }
+.form-control>#id_check {
+  height: 52px;
+  color:#000000 !important;
+  border: none;
+  background:rgba(250,250,250,0.05);
+  border: 1px solid rgba(250,250,250,0.5);
+  border-radius: 10px;
+  padding:4px 22px;
+  font-size:14px;
+  margin-bottom: 30px;
+}
 .form-control:focus {
   box-shadow:none;
   outline:none;
@@ -773,6 +784,11 @@ textarea.form-control {
 .testimonials-section .item p {
   font-size: 17px;
   font-style: italic;
+}
+.login_form_CSS {
+	align-self: center;
+	align-items: center;
+	left: 50%;
 }
 
 /*==============================================
